<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rel11Network"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_search_bar_shop_background">

        <TextView
            android:id="@+id/textFrag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"

            android:layout_margin="5dp"
            android:gravity="center"
            android:text="Connectivity Error"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/img1Frag"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:src="@drawable/re_logo" />

        <ImageView
            android:id="@+id/idjik"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_margin="5dp"
            android:src="@drawable/gen_part" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rel11Network"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:text=""
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        android:visibility="gone" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/rel11Network"
        android:background="@color/colorAccent"
        android:visibility="gone" />

    <TextView
        android:id="@+id/txtMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rel11Network"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/servererror"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="14dp" />

    <View
        android:id="@+id/views"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/txtMessage"
        android:layout_margin="10dp"
        android:background="@color/colorAccent" />

    <Button
        android:id="@+id/btnSerErrTrytoConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/views"
        android:layout_centerHorizontal="true"
        android:background="@drawable/alert_btn_selector"
        android:padding="10dp"
        android:text="@string/btn_reconnect_title"
        android:textColor="@color/colorAccent" />

    <Button
        android:id="@+id/btnSupportEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/btn_support_title"
        android:visibility="gone" />

</RelativeLayout>