<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_near_by_labs"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.ProductLog"
    tools:showIn="@layout/activity_productscan">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/upc_option"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <RelativeLayout
                android:id="@+id/manuallylayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_weight="1"
                android:background="@drawable/gradient_search_bar_shop_background1"
                android:padding="10dp">

                <TextView
                    android:id="@+id/manual"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/manual"
                    android:textColor="@color/colorAccent"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/maunalpic"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/manualupc" />

                <TextView
                    android:id="@+id/offlineentercode"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_below="@+id/manual"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/roundbutton"
                    android:drawableLeft="@drawable/ic_add_cart"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="ADD TO UPC CART"
                    android:textColor="@color/colorAccent" />

                <TextView
                    android:id="@+id/entermanualtext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_below="@+id/offlineentercode"
                    android:gravity="bottom"
                    android:padding="5dp"
                    android:text="*Guide line (Enter Multiple UPC's with (-) separate ex UPC01234-UPCTYUI9)."
                    android:textColor="@color/colorAccent" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <RelativeLayout
                android:id="@+id/scanlayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/manuallylayout"
                android:layout_weight="1"
                android:background="@drawable/gradient_search_bar_shop_background1"
                android:padding="10dp"
                android:visibility="visible">

                <TextView
                    android:id="@+id/gallery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gallery"
                    android:textColor="@color/colorAccent"
                    android:textSize="25sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/scannerpic"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/gallery" />


                <TextView
                    android:id="@+id/newscanbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_below="@+id/gallery"
                    android:layout_centerInParent="true"
                    android:background="@drawable/roundbutton"
                    android:drawableLeft="@drawable/ic_image"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="CHOOSE IMAGES"
                    android:textColor="@color/colorAccent" />

                <TextView
                    android:id="@+id/newscanbuttonone"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_below="@+id/gallery"
                    android:layout_centerInParent="true"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/roundbuttonone"
                    android:drawableLeft="@drawable/ic_image"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="CHOOSE IMAGES"
                    android:textColor="#ffffff"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/chooseimagetext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/newscanbutton"
                    android:padding="10dp"
                    android:text="*Guide line (Select Clear UPC Images for Scanning We can select 10 UPC Images at a time)."
                    android:textColor="@color/colorAccent" />


                <TextView
                    android:id="@+id/scanprogressbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/chooseimagetext"
                    android:layout_centerHorizontal="true"
                    android:text="SCANNING..."
                    android:textColor="@color/colorRed"
                    android:visibility="invisible" />


            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">


            <RelativeLayout
                android:id="@+id/scanlayoutscan"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/manuallylayout"
                android:layout_weight="1"
                android:background="@drawable/gradient_search_bar_shop_background1"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tvScan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/scan"
                    android:textColor="@color/colorAccent"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/scanpic"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/imagescanner" />

                <TextView
                    android:id="@+id/tvScanUpc"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_below="@+id/tvScan"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/roundbutton"
                    android:drawableLeft="@drawable/ic_scan_upc"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="SCAN UPC"
                    android:textColor="@color/colorAccent" />


                <TextView
                    android:id="@+id/scantext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvScanUpc"
                    android:padding="10dp"
                    android:text="*Guide line (Scan the UPC with camera)."
                    android:textColor="@color/colorAccent" />

            </RelativeLayout>
        </LinearLayout>


    </LinearLayout>


</LinearLayout>
